[tool.poetry]
name = "random-villan-generator"
version = "0.1.0"
description = "A random villan name generator. Have fun!"
authors = ["RoastedCookie47"]
license = "MIT"
readme = "README.md"
packages = [{include = "random_villan_generator"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
