[tool.poetry]
name = "random-villan-generator"
version = "0.1.0"
description = "A random villan name generator. Have fun!"
authors = ["RoastedCookie47"]
license = "MIT"
readme = "README.md"
packages = [{include = "random_villan_generator"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
black = "^22.12.0"
isort = "^5.11.2"
flake8 = "^6.0.0"
bandit = "^1.7.4"
safety = "^2.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
